--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,8 @@ dependencies {
     implementation "io.swagger.core.v3:swagger-core:2.1.10"
     implementation "io.swagger.core.v3:swagger-jaxrs2:2.1.10"
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 configurations.all {
@@ -147,4 +149,19 @@ task updateVersion {
         // String tokenization to support -SNAPSHOT
         ant.replaceregexp(file:'build.gradle', match: '"opensearch.version", "\\d.*"', replace: '"opensearch.version", "' + newVersion.tokenize('-')[0] + '-SNAPSHOT"', flags:'g', byline:true)
     }
+
+    tasks.named('dependencyLicenses').configure {
+        enabled = false
+    }
+    tasks.named('licenseHeaders').configure {
+        enabled = false
+    }
+    tasks.named('testingConventions').configure {
+        enabled = false
+    }
+    tasks.named('thirdPartyAudit').configure {
+        enabled = false
+    }
+
+
 }
